# kvstore-effectful

./: README.md  cabal.project  flake.nix  kvstore-effectful.cabal  stack.yaml
.github/workflows/: haskell.yml
kvstore-effectful/: kvstore-effectful.cabal
kvstore-effectful-cache/: README.md  kvstore-effectful-cache.cabal
kvstore-effectful-cache/src/Effectful/KVStore/: Cache.hs
kvstore-effectful-cache/test/: Spec.hs
kvstore-effectful-cache/test/Test/Effectful/KVStore/: Cache.hs
kvstore-effectful-spec/: LICENSE  kvstore-effectful-spec.cabal
kvstore-effectful-statemap/: kvstore-effectful-statemap.cabal
kvstore-effectful-statemap/src/Effectful/KVStore/: StateMap.hs
kvstore-effectful/src/Effectful/: KVStore.hs
kvstore-effectful/test/Test/Effectful/KVStore/: StateMap.hs
src/Effectful/KVStore/: StateMap.hs
test/: Spec.hs
test/Test/Effectful/: KVStore.hs
test/Test/Effectful/KVStore/: StateMap.hs
