cabal-version: 2.4
name:          kvstore-effectful-spec
version:       0.0.1.0
license:       BSD-3-Clause
license-files: LICENSE
author:        Paweł Szulc, Łukasz Gołębiewski
maintainer:
  Paweł Szulc <paul.szulc@gmail.com>, Łukasz Gołębiewski <lukasz.golebiewski@gmail.com>

common globals
  default-language:   GHC2021
  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    LambdaCase
    ScopedTypeVariables
    TypeFamilies

  ghc-options:
    -Wall -Werror -Wcompat -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns -fwarn-tabs
    -fwarn-incomplete-record-updates -fwarn-identities
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wmissing-kind-signatures

library
  import:          globals
  exposed-modules:
    Test.Effectful.KVStore

  build-depends:
    , base               >=4.9 && <5
    , containers
    , effectful
    , effectful-core
    , hedgehog
    , kvstore-effectful
    , tasty
    , tasty-hedgehog
    , transformers

  hs-source-dirs:  src
